@@ -51,12 +51,11 @@ import junit.framework.Test;
 import junit.framework.TestCase;
 import junit.framework.TestSuite;
 
-import org.jfree.chart.plot.CategoryMarker;
 import org.jfree.chart.plot.PieLabelRecord;
 import org.jfree.text.TextBox;
 
 /**
- * Some tests for the {@link CategoryMarker} class.
+ * Some tests for the {@link PieLabelRecord} class.
  */
 public class PieLabelRecordTests extends TestCase {
 
@@ -124,6 +123,10 @@ public class PieLabelRecordTests extends TestCase {
         p2 = new PieLabelRecord("B", 1.1, 2.2, new TextBox("C"), 3.3, 4.4, 5.5);
         assertTrue(p1.equals(p2));
 
+        p1.setURL("ABC");
+        assertFalse(p1.equals(p2));
+        p2.setURL("ABC");
+        assertTrue(p1.equals(p2));
     }
 
     /**
